<resources>
    <string name="app_name">RamaAlsheikha-Assignment2</string>
    <string name="Title">About Us</string>
    <string name="paragraph">Taste and See Coffee Shop and Gallery offers a unique coffee house environment unlike any other in Macon. We are not only a place to drop in and get your morning cup of coffee (although you are more than welcome to do that), we are a place where you can sit down and enjoy that tailor-made cup of coffee. If you need to work, we have a seating area created specifically for you. If you need to rest, we have a soft-seating area in front of a stone fire place that is perfect for your weary mind and body. We offer a delicious variety of coffee roasted in house made by our professionally trained baristas. We have everything from classic coffee to our house made specialty beverages.  All of our sauces and syrups are made in-house with all natural ingredients (no chemicals or preservatives) ensuring you the highest quality in taste and health.  You can complete your coffee with one of our delicious sweet treats made by our very own baker. We look forward to serving you at Taste and See Coffee Shop and Gallery!</string>
    <string name="enter_pickup_info">Enter Pickup Info</string>
    <string name="enter_you_full_name">Enter you Full Name</string>
    <string name="start_ordering">START ORDERING</string>
    <string name="select_a_coffee">Select a Coffee</string>
    <string name="americano">Americano</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="select_a_size">Select a Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="options">Options</string>
    <string name="_2_shots">2 Shots</string>
    <string name="sugar">Sugar</string>
    <string name="cream">Cream</string>
    <string name="whole_milk">Whole Milk</string>
    <string name="_2_milk">2%Milk</string>
    <string name="almod_milk">Almod Milk</string>
    <string name="full_name">Full Name</string>
    <string name="john_doe">John Doe</string>
    <string name="phone_number">Phone Number</string>
    <string name="_444_444_444">444-444-444</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="enter_payment_info">Enter Payment Info</string>
    <string name="card_type">Card Type</string>
    <string name="card_number">Card Number</string>
    <string name="_1234123412341234">1234123412341234</string>
    <string name="card_expiry">Card Expiry</string>
    <string name="mm">MM</string>
    <string name="yyy">YYY</string>
    <string name="slach">/</string>
    <string name="stars">***</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="latte">Latte</string>
    <string name="macchiato">Macchiato</string>
    <string name="mm_yyyy">MM/YYYY</string>
    <string name="error_valid_card_number">Please enter a valid card number</string>
    <string name="card_date_regex">^(3[01]|[12][0-9]|0[1-9])/[0-9]{4}$</string>
    <string name="error_valid_card_date">Please enter a valid card date</string>
    <string name="error_valid_card_cvv">Please enter a valid card CVV</string>
    <string name="first_element">^</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="error_valid_name">please enter your name</string>
    <string name="error_valid_number">failed phone number</string>
    <string name="orderinfo">orderInfo</string>
    <string name="userinfo">userInfo</string>
    <string name="pickertime">pickerTime</string>
    <string name="cup_a_coffee">Cup_A_Coffee</string>
    <string name="pay">Pay</string>
    <string name="summary">Summary</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="paymentinfo">paymentInfo</string>
    <string name="navigation_failed_please_try_again">Navigation failed. Please try again.</string>
    <string name="and">"and "</string>
    <string name="a_with">"A %1$s %2$s, with "</string>
    <string name="comma">,</string>
    <string name="orderbuildingfragment">OrderBuildingFragment</string>
    <string name="navigation_error">Navigation error: %1$s</string>
    <string name="an_error_occurred_please_try_again">An error occurred. Please try again.</string>
    <string name="nn">nn</string>
    <string name="full_name_two">Full Name</string>
    <string-array name="cardType" >

        <item>_</item>
        <item>Visa</item>
        <item>Mastercard</item>
    </string-array>
</resources>